--- a/.github/workflows/auto-deploy.yaml
+++ b/.github/workflows/auto-deploy.yaml
@@ -13,12 +13,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy via SSH
-        uses: appleboy/ssh-actions@v1.0.3
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{secrets.SSH_HOST}}
           username: root
           key: ${{secrets.SSH_KEY}}
           script: |
             cd /home/ubuntu/github-actions
-            git pull https://github.com/imSyntn/github-actions
+            git pull https://github.com/imSyntn/github-actions.git
             docker compose up -d --build
